cmake_minimum_required(VERSION 3.20)
project(RootSkid VERSION 1.0 LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
if(NOT WIN32)
    message(FATAL_ERROR "RootSkid currently supports Windows only")
endif()
add_executable(RootSkid WIN32 main.cpp)
target_compile_definitions(RootSkid PRIVATE UNICODE _UNICODE WIN32_LEAN_AND_MEAN)
target_link_libraries(RootSkid PRIVATE comctl32 dwmapi advapi32)
target_link_options(RootSkid PRIVATE $<$<CXX_COMPILER_ID:GNU>:-municode>)
if(MSVC)
    target_compile_options(RootSkid PRIVATE /W4 /permissive-)
else()
    target_compile_options(RootSkid PRIVATE -Wall -Wextra -Wpedantic)
endif()
